# alonzo

./: LICENSE  README.md  alonzo.cabal
src/: Alonzo.hs  Bot.hs  Brain.hs  Command.hs  Config.hs  Encoding.hs  IRC.hs  Logging.hs  Main.hs  Match.hs  Util.hs
src/Alonzo/: Foo.hs
test/: ConfigSpec.hs  Helper.hs  UtilSpec.hs
test/Alonzo/: FooSpec.hs
