name:             alonzo
version:          0.0.0
license:          MIT
license-file:     LICENSE
build-type:       Simple
cabal-version:    >= 1.10
synopsis:         Your friendly IRC bot! 

source-repository head
  type: git
  location: https://github.com/wimdu/alonzo

executable alonzo
  default-language:
      Haskell2010
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  main-is:
      Main.hs
  build-depends:
      base == 4.*
    , mtl
    , bytestring
    , text
    , connection
    , network
    , data-default
    , irc
    , containers
    , random
    , regex-posix

test-suite spec
  default-language:
      Haskell2010
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      test, src
  main-is:
      Spec.hs
  build-depends:
      base == 4.*
    , mtl
    , bytestring
    , text
    , connection
    , network
    , data-default
    , irc
    , containers
    , random
    , regex-posix

    , hspec
    , QuickCheck
